@@ -3,7 +3,7 @@ requires 'namespace::clean'    => 0.24;
 requires 'Moo'                 => 2.000000;
 requires 'Scalar::Util'        => 0;
 requires 'Carp'                => 0;
-requires 'Config::MethodProxy' => 0.02;
+requires 'Data::MethodProxy'   => 0.03;
 
 on test => sub {
     requires 'Test2::Suite' => 0;
