@@ -2,6 +2,7 @@ Revision history for Perl extension MooX-BuildArgs.
 
 {{$NEXT}}
 
+ - Use Data::MethodProxy instead of Config::MethodProxy.
  - Migrate build tooling from Dist::Zilla to Minilla.
 
 0.04 2016-11-26
